[tool.poetry]
name = "inkbytes common  modules"
version = "0.1.0"
description = ""
authors = ["Julian De La Rosa <julian.delarosa.suncar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
nltk = "3.8.1"
pandas = "2.0.1"
requests = "2.31.0"
tinydb = "4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
